# gpt-discord-bot

./: .replit  README.md  pyproject.toml  replit.nix
src/: completion.py  config.yaml
