[tool.poetry]
name = "repl_nix_gpt-discord-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
openai = "^0.26.4"
python-dotenv = "^0.21.1"
PyYAML = "^6.0"
dacite = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
